[gd_scene load_steps=6 format=3 uid="uid://cihdmpr36kg32"]

[ext_resource type="Texture2D" uid="uid://b0u3srggt8s74" path="res://Assets/SF1/ShiningForceTextBackground.png" id="2"]
[ext_resource type="Script" path="res://General/BattleActionsMenu/EquipMenu/EquipMenu.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://clonaa5opblg5" path="res://Assets/SFCD/Items/UnequipHand.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c1jstal8qrxys" path="res://Assets/SFCD/Items/EmptyItemSlot.png" id="5"]
[ext_resource type="PackedScene" path="res://General/BattleActionsMenu/RedSelectionBorder/RedSelectionBorder.tscn" id="6"]

[node name="BattleEquipMenuRoot" type="Node2D"]
script = ExtResource("3")

[node name="EquipSlotUpSprite" type="Sprite2D" parent="."]
position = Vector2(24, 12)
texture = ExtResource("5")

[node name="EquipSlotLeftSprite" type="Sprite2D" parent="."]
position = Vector2(8, 24)
texture = ExtResource("5")

[node name="EquipSlotRightSprite" type="Sprite2D" parent="."]
position = Vector2(40, 24)
texture = ExtResource("5")

[node name="UnequipSlotDownSprite" type="Sprite2D" parent="."]
position = Vector2(24, 36)
texture = ExtResource("4")

[node name="ItemInfoNinePatchRect" type="NinePatchRect" parent="."]
offset_left = 58.0
offset_top = 8.0
offset_right = 172.0
offset_bottom = 48.0
texture = ExtResource("2")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TypeNameLabel" type="Label" parent="ItemInfoNinePatchRect"]
layout_mode = 0
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
offset_left = 6.24965
offset_top = 6.0
offset_right = -6.0
offset_bottom = -24.0
text = "ITEM TYPE"

[node name="WeaponNameLabel" type="Label" parent="ItemInfoNinePatchRect"]
layout_mode = 0
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 17.0
offset_right = -6.0
offset_bottom = -15.0
text = "ITEM NAME"

[node name="EquippedLabel" type="Label" parent="ItemInfoNinePatchRect"]
layout_mode = 0
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 26.0
offset_right = -5.75034
offset_bottom = -6.0
text = "EQUIPPED"

[node name="StatNinePatchRect" type="NinePatchRect" parent="."]
offset_left = -113.0
offset_top = -32.0
offset_right = -11.0
offset_bottom = 48.0
texture = ExtResource("2")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="StaticLabelVBoxContainer" type="VBoxContainer" parent="StatNinePatchRect"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 60.0
offset_bottom = 73.0

[node name="AttackStaticLabel" type="Label" parent="StatNinePatchRect/StaticLabelVBoxContainer"]
layout_mode = 2
text = "ATTACK"

[node name="DefenseStaticLabel" type="Label" parent="StatNinePatchRect/StaticLabelVBoxContainer"]
layout_mode = 2
text = "DEFENSE"

[node name="MoveStaticLabel" type="Label" parent="StatNinePatchRect/StaticLabelVBoxContainer"]
layout_mode = 2
text = "MOVE"

[node name="AgilityStaticLabel" type="Label" parent="StatNinePatchRect/StaticLabelVBoxContainer"]
layout_mode = 2
text = "AGILITY"

[node name="StatVBoxContainer" type="VBoxContainer" parent="StatNinePatchRect"]
layout_mode = 0
offset_left = 63.0
offset_top = 7.0
offset_right = 95.0
offset_bottom = 73.0

[node name="AttackStatLabel" type="Label" parent="StatNinePatchRect/StatVBoxContainer"]
layout_mode = 2
text = "999"

[node name="DefenseStatLabel" type="Label" parent="StatNinePatchRect/StatVBoxContainer"]
layout_mode = 2
text = "999"

[node name="MoveStatLabel" type="Label" parent="StatNinePatchRect/StatVBoxContainer"]
layout_mode = 2
text = "999"

[node name="AgilityStatLabel" type="Label" parent="StatNinePatchRect/StatVBoxContainer"]
layout_mode = 2
text = "999"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RedSelectionBorderRoot" parent="." instance=ExtResource("6")]
